swen430as1/tests/invalid/trycatch/TryCatch_Invalid_10.while
void f(int x) {
    //
    try {
        int r = 1;
    } catch(int y = 1) {
        // 
    }
}